--- a/starter-files/views/mixins/_storeForm.pug
+++ b/starter-files/views/mixins/_storeForm.pug
@@ -1,15 +1,15 @@
 mixin storeForm(store = {})
-  form(action="/add" method="POST" class="card")
+  form(action=`/add/${store.id || ''}` method="POST" class="card")
     label(for="name") Name 
-    input(type="text" name="name")
+    input(type="text" name="name" value=store.name)
     label(for="description") Description
-    textarea(name="description")
+    textarea(name="description" value=store.name)= store.description
     - const choices = ['wifi', 'Open Late', 'Family Freindly', 'Vegetarian', 'Licensed']
-
+    - const tags = store.tags || []
     ul.tags 
       each choice in choices 
         .tag.tag__choice 
-          input(type="checkbox", id=choice value=choice name="tags")
+          input(type="checkbox", id=choice value=choice name="tags" checked=(tags.includes(choice)))
           label(for=" choice")= choice
     input(type="submit", value="Save ➡️"  class="button")
     
