Implemented file upload using multer and jimp

--- a/starter-files/views/mixins/_storeForm.pug
+++ b/starter-files/views/mixins/_storeForm.pug
@@ -1,9 +1,13 @@
 mixin storeForm(store = {})
-  form(action=`/add/${store.id || ''}` method="POST" class="card")
+  form(action=`/add/${store.id || ''}` method="POST" class="card" enctype="multipart/form-data")
     label(for="name") Name 
     input(type="text" name="name" value=store.name)
     label(for="description") Description
     textarea(name="description" value=store.name)= store.description
+    label(for="photo") Photo 
+      input(type="file" name="photo" id="photo" accept="image/git, image/png, image/jpeg")
+      if store.photo  
+        img(src=`/uploade/${store.photo}`, alt=store.name width=200)
     - const choices = ['wifi', 'Open Late', 'Family Freindly', 'Vegetarian', 'Licensed']
     - const tags = store.tags || []
     ul.tags 
